--- a/css/meta-box.css
+++ b/css/meta-box.css
@@ -8,7 +8,7 @@
 
 #post_to_mailchimp-meta-box .post_to_mailchimp__error .post_to_mailchimp__error--details { line-height: 1rem; }
 
-#post_to_mailchimp-meta-box .campaign-controls--send { /*align-self: flex-end;*/ display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end; }
+#post_to_mailchimp-meta-box .campaign-controls--send { /*align-self: flex-end;*/ }
 
 #post_to_mailchimp-meta-box button.send { background: #ffe01b; font-weight: bold; color: black; margin-top: 4px; text-align: right; }
 
